--- a/курсач/курсач.csproj
+++ b/курсач/курсач.csproj
@@ -33,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Guna.UI2, Version=2.0.2.9, Culture=neutral, PublicKeyToken=e4b9cdd7b4cde4b4, processorArchitecture=MSIL">
-      <HintPath>..\packages\Guna.UI2.WinForms.2.0.2.9\lib\net40\Guna.UI2.dll</HintPath>
+    <Reference Include="Guna.UI2, Version=2.0.3.0, Culture=neutral, PublicKeyToken=e4b9cdd7b4cde4b4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Guna.UI2.WinForms.2.0.3\lib\net40\Guna.UI2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -69,6 +69,18 @@
     <Compile Include="Главное меню.Designer.cs">
       <DependentUpon>Главное меню.cs</DependentUpon>
     </Compile>
+    <Compile Include="Просмотр мотоциклов.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Просмотр мотоциклов.Designer.cs">
+      <DependentUpon>Просмотр мотоциклов.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Профиль.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Профиль.Designer.cs">
+      <DependentUpon>Профиль.cs</DependentUpon>
+    </Compile>
     <Compile Include="Регистрация.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +105,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Главное меню.resx">
       <DependentUpon>Главное меню.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Просмотр мотоциклов.resx">
+      <DependentUpon>Просмотр мотоциклов.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Профиль.resx">
+      <DependentUpon>Профиль.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Регистрация.resx">
       <DependentUpon>Регистрация.cs</DependentUpon>
@@ -137,6 +155,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\0Y1CzJ4siug.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\skull-scooter-minimalism-minimalist.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\kawasaki_ninja_250r_2009_1280x800_red.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
