--- a/курсач/курсач.csproj
+++ b/курсач/курсач.csproj
@@ -92,6 +92,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BD.cs" />
     <Compile Include="menu.cs">
       <SubType>Form</SubType>
     </Compile>
