--- a/курсач/курсач.csproj
+++ b/курсач/курсач.csproj
@@ -39,8 +39,8 @@
     <Reference Include="Google.Protobuf, Version=3.14.0.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Protobuf.3.14.0\lib\net45\Google.Protobuf.dll</HintPath>
     </Reference>
-    <Reference Include="Guna.UI2, Version=2.0.3.1, Culture=neutral, PublicKeyToken=e4b9cdd7b4cde4b4, processorArchitecture=MSIL">
-      <HintPath>..\packages\Guna.UI2.WinForms.2.0.3.1\lib\net40\Guna.UI2.dll</HintPath>
+    <Reference Include="Guna.UI2, Version=2.0.3.2, Culture=neutral, PublicKeyToken=4015e4865bda28a4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Guna.UI2.WinForms.2.0.3.2\lib\net40\Guna.UI2.dll</HintPath>
     </Reference>
     <Reference Include="K4os.Compression.LZ4, Version=1.2.6.0, Culture=neutral, PublicKeyToken=2186fa9121ef231d, processorArchitecture=MSIL">
       <HintPath>..\packages\K4os.Compression.LZ4.1.2.6\lib\net46\K4os.Compression.LZ4.dll</HintPath>
@@ -101,6 +101,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User Controls\MotoBase.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="User Controls\MotoBase.Designer.cs">
+      <DependentUpon>MotoBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Авторизация.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -150,6 +156,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="User Controls\MotoBase.resx">
+      <DependentUpon>MotoBase.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Авторизация.resx">
       <DependentUpon>Авторизация.cs</DependentUpon>
     </EmbeddedResource>
@@ -244,6 +253,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\free-png.ru-781.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Pictures\MenuIcons\Exit.png" />
+    <Content Include="Resources\Pictures\MenuIcons\Clients.png" />
+    <Content Include="Resources\Pictures\MenuIcons\History.png" />
+    <Content Include="Resources\Pictures\MenuIcons\Staff.png" />
+    <Content Include="Resources\Pictures\MenuIcons\MotoBase.png" />
+    <None Include="Resources\icons8-значок-96.png" />
+    <None Include="Resources\icons8-групповой-звонок-96.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
