--- a/курсач/курсач.csproj
+++ b/курсач/курсач.csproj
@@ -97,6 +97,12 @@
     <Compile Include="Classes\ConnLine.cs" />
     <Compile Include="Classes\DBConn.cs" />
     <Compile Include="Classes\Encryption.cs" />
+    <Compile Include="Аренда2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Аренда2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -152,6 +158,18 @@
     <Compile Include="MainMenu.Designer.cs">
       <DependentUpon>MainMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="Аренда.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Аренда.Designer.cs">
+      <DependentUpon>Аренда.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Конец.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Конец.Designer.cs">
+      <DependentUpon>Конец.cs</DependentUpon>
+    </Compile>
     <Compile Include="Профиль.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -164,6 +182,9 @@
     <Compile Include="Регистрация.Designer.cs">
       <DependentUpon>Регистрация.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Аренда2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
@@ -192,6 +213,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainMenu.resx">
       <DependentUpon>MainMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Аренда.resx">
+      <DependentUpon>Аренда.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Аренда2.resx">
+      <DependentUpon>Аренда2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Конец.resx">
+      <DependentUpon>Конец.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Профиль.resx">
       <DependentUpon>Профиль.cs</DependentUpon>
