--- a/курсач/курсач.csproj
+++ b/курсач/курсач.csproj
@@ -217,9 +217,6 @@
     <EmbeddedResource Include="Аренда.resx">
       <DependentUpon>Аренда.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Аренда2.resx">
-      <DependentUpon>Аренда2.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Конец.resx">
       <DependentUpon>Конец.cs</DependentUpon>
     </EmbeddedResource>
@@ -244,7 +241,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\purepng.com-kawasaki-ninja-300motorcyclemotorbikebikevehiclekawasaki-981525162532mfefe.png" />
     <None Include="Resources\icons8-удалить-навсегда-100.png" />
+    <None Include="Resources\2f5dc462d0dcfa6448e5d896361e185b.jpg" />
     <Content Include="Resources\Pictures\EditRows\icons8-андроид-96.png" />
     <Content Include="Resources\Pictures\EditRows\Phone.png" />
     <Content Include="Resources\Pictures\EditRows\Login.png" />
